src/objects/LeadRankingSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Settings is Market and Product Specific.</description>
    <fields>
        <fullName>MarketCode__c</fullName>
        <label>MarketCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Holds products like LT and etc.</description>
        <label>Product</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Holds ranking value depending on Market and product, which can be 9 or 10.</description>
        <label>Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LeadRankingSettings</label>
</CustomObject>